...
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".maps.MapsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_main_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ml_above_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                map:layout_constraintBottom_toBottomOf="parent"
                map:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_profile"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_profile"
                    android:visibility="visible"
                    map:layout_constraintBottom_toBottomOf="parent"
                    map:layout_constraintEnd_toEndOf="parent"
...
                    map:layout_constraintBottom_toBottomOf="@+id/txt_user_exp_goal"
                    map:layout_constraintEnd_toStartOf="@+id/txt_user_exp_goal"
                    map:layout_constraintTop_toTopOf="@+id/txt_user_exp_goal"
                    tools:text="/" />

                <TextView
                    android:id="@+id/txt_user_current_exp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:textColor="@color/white_FFFFFF"
                    android:textSize="12sp"
                    android:visibility="gone"
...
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:visibility="gone"
                map:cardBackgroundColor="@color/white_FFFFFF"
                map:cardCornerRadius="@dimen/default_radius"
                map:cardElevation="6dp"
                map:layout_constraintBottom_toTopOf="@+id/fab_qrcode"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_in_cv_place_details"
...
                        map:layout_constraintTop_toTopOf="@+id/cb_lv5" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="32dp"
                map:backgroundTint="@color/white_FFFFFF"
                map:borderWidth="0dp"
...
